providers/github/tests/snapshots/repo-browse__01-list-octocat.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: trace.clone()
---
## step 1: list /octocat
Hello-World  dir  -  -
Spoon-Knife  dir  -  -
boysenberry-repo-1  dir  -  -
git-consortium  dir  -  -
hello-worId  dir  -  -
linguist  dir  -  -
octocat.github.io  dir  -  -
owner.json  file  1232  dynamic
profile.md  file  unknown  stable
test-repo1  dir  -  -
canonical:
  /octocat/owner.json  sha256:0da1674f04dccf41b7d98d5dafeee84ef327e8988509385c9f7c79c9755ea24c
  /octocat/profile.md  sha256:0da1674f04dccf41b7d98d5dafeee84ef327e8988509385c9f7c79c9755ea24c
fs:
  (none)
invalidations:
  (none)
