providers/github/tests/snapshots/repo-browse__04-list-repo.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: trace.clone()
---
## step 4: list /octocat/Hello-World/repo
subtree
canonical:
  (none)
fs:
  (none)
invalidations:
  (none)
